# sumd

./: CHANGELOG.md  README.md  SPEC.md  SUMD.md  SUMR.md  Taskfile.yml  app.doql.css  app.doql.less  goal.yaml  mcp.json  pyproject.toml  pyqual.yaml  sumd.json
.pyqual/: pipeline.db
docs/: README.md  USAGE.md
examples/: README.md  SUMD.md  sumd.json
examples/basic/: README.md  demo.sh
examples/basic/sample-project/: README.md  SUMD.md  Taskfile.yml  goal.yaml  openapi.yaml  pyproject.toml  sumd.json
examples/basic/sample-project/project/: map.toon.yaml
examples/integrations/: Dockerfile  README.md  docker-compose.yml  github-actions.yml  makefile  pre-commit-config.yaml  taskfile.yml  vscode-tasks.json
examples/llm/: README.md  anthropic_example.py  context_injection.md  llm_cli_example.sh  ollama_example.sh  openai_example.py
examples/mcp/: README.md  claude_desktop_config.json  continue_config.json  cursor_mcp.json  mcp_client.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt  validation.toon.yaml
scripts/: generate_all_sumd.py
sumd/: __init__.py  cli.py  extractor.py  generator.py  mcp_server.py  parser.py  pipeline.py  renderer.py  toon_parser.py  validator.py
sumd/dsl/: commands.py  engine.py  parser.py  schema.py
sumd/sections/: __init__.py  api_stubs.py  architecture.py  base.py  call_graph.py  code_analysis.py  configuration.py  dependencies.py  deployment.py  environment.py  extras.py  interfaces.py  metadata.py  quality.py  refactor_analysis.py  source_snippets.py  test_contracts.py  workflows.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml  smoke-generic.testql.toon.yaml
tests/: test_cli.py  test_extractor.py  test_mcp_cqrs_dsl.py  test_mcp_server.py  test_parser.py  test_pipeline.py  test_sections.py  test_statement.py
