[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sumd"
version = "0.1.9"
description = "SUMD - Structured Unified Markdown Descriptor for AI-aware project documentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"}
]
keywords = ["sumd", "markdown", "documentation", "llm", "project-descriptor"]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sumd = "sumd.cli:main"
sumd-mcp = "sumd.mcp_server:main"

[project.urls]
Homepage = "https://github.com/tom/statement"
Repository = "https://github.com/tom/statement"

[tool.hatch.build.targets.wheel]
packages = ["sumd"]

[tool.hatch.build.targets.sdist]
include = [
    "/sumd",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
