[project]
name = "my-api"
version = "0.1.0"
description = "Sample REST API project for SUMD demo"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[project.dependencies]
fastapi = ">=0.100"
uvicorn = ">=0.23"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
my-api = "my_api.cli:main"
